deploy/kubernetes/custom-tasks/worker-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labfactory-ansible-worker
spec:
  template:
    spec:
      serviceAccountName: labfactory-ansible-worker
      containers:
        - name: ansible-worker
